Piccola modifica alla finestra di dialogo.

--- a/Resources/css/catalogo.css
+++ b/Resources/css/catalogo.css
@@ -41,23 +41,27 @@ body {
 	text-align:center;
 }
 
-#contenuto h1{
+#contenuto h1 {
 	color: #ed6b06;
 }
 
-#contenuto h2{
+#contenuto h2 {
 }
 
-#finestraAggiornamento{
+#finestraAggiornamento {
 	display:none;
 }
 
 #interrompi {
-	float:left;
+	position:absolute;
+	bottom:10px;
+	left:10px;
 }
 
 #aggiorna {
-	float:right;
+	position:absolute;
+	bottom:10px;
+	right:10px;
 }
 
 #sceltaScuola {
@@ -92,11 +96,11 @@ body {
 	border-right:3px solid #000000;
 }
 
-#scuolaPrimaria{
+#scuolaPrimaria {
 	background-image:url('../img/primary.jpg');
 	background-repeat:no-repeat;
 }
-#scuolaSecondaria{
+#scuolaSecondaria {
 	background-image:url('../img/school.jpg');
 	background-repeat:no-repeat;
 }
