Nuove immagini per la home page, qualche ritocco ad alcuni testi degli alert. Variazione di alcune tonalità di grigio nei CSS

--- a/Resources/css/catalogo.css
+++ b/Resources/css/catalogo.css
@@ -478,7 +478,8 @@ p.struttura-titolo {
 	padding-left:10px;
 	padding-right:10px;
 	border:0;
-	background-color:#D6D6D6;
+/*	background-color:#D6D6D6;*/
+	background-color:#BBB;
 	font-size:13px;
 	color:#000;
 	text-align:left;
