Risolto un piccolo baco che mandava a capo tutto il blocco iniziale se presente sottotitolo o descrizione volume troppo lunga con finestre piccole

--- a/Resources/css/catalogo.css
+++ b/Resources/css/catalogo.css
@@ -304,6 +304,7 @@ div.risultatoRigaScheda div.risultatoRigaSx {
 }
 div.risultatoRigaScheda div.risultatoRigaDx {
 	float:left;
+	width:67%;
 	margin:0;
 	margin-left:20px;
 	padding:0;
