--- a/Resources/css/catalogo.css
+++ b/Resources/css/catalogo.css
@@ -248,16 +248,39 @@ a {
 
 #strato {
 	position:absolute;
-	top:79px;
+	top:78px;
 	left:10px;
 	right:10px;
 	display:none;
-	height:52px;
+	height:55px;
 	background-image:url('../img/bkStrato.png');
-	z-index:10000;
+	z-index:2;
 	border: 1px solid;
 	border-color:red;
  	cursor: url(../img/hand.cur), default !important;
+}
+
+#back {
+	position:absolute;
+	top:68px;
+	left:10px;
+	right:10px;
+	display:none;
+	width:70px;
+	height:67px;
+	background-image:url('../img/bkBack.gif');
+	z-index:3;
+	border:0;
+}
+
+#back-icon {
+	position:absolute;
+	top:10px;
+	left:0px;
+	right:10px;
+	display:none;
+	z-index:4;
+	border:0;
 }
 
 #close-icon {
