--- a/Resources/css/catalogo.css
+++ b/Resources/css/catalogo.css
@@ -200,6 +200,13 @@ a {
 	background-color:#666;
 }
 
+#stampa {
+	position:absolute;
+	top:3px;
+	right:3px;
+	cursor:pointer;
+	z-index: 1000;
+}
 
 /************************************************
 ** Ricerca
