--- a/Resources/css/mac.css
+++ b/Resources/css/mac.css
@@ -1,3 +1,3 @@
-a, #strato, #strato p, div.risultatoRiga, p.header-row, p.header-row-expanded, #scheda-btt img#digilibro-logo, #scheda-btt img#etext-logo, #printer {
+a, #strato, #strato p, div.risultatoRiga, p.header-row, p.header-row-expanded, #scheda-btt img#digilibro-logo, #scheda-btt img#etext-logo, #stampa {
 	cursor: url(../img/hand.cur) 6 0, default !important;
 }
